*Empty MediaWiki Message*

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -66,17 +66,17 @@ Spanningen kwammen opny an de oppervlakte by de hongaarske Grand Prix van 2007. 
 De rivaliteyt tüsken Hamilton en teammåt Alonso leidden töt de spekulåtsy dat eynen an et ende van et seisoon McLaren verlåten wyr. Alonso en McLaren beendigen dårup öär kontrakt med wedersydse oavereynstemming in november.
 
 ==== Et seisoon van 2008: Jüngsten werldkampioon oit ====
-A month after Alonso's departure, it was confirmed that Heikki Kovalainen would drive the second car for McLaren-Mercedes in 2008 alongside Hamilton,<ref>{{cite web|url=http://www.f1fanatic.co.uk/2007/12/14/mclaren-set-to-confirm-heikki-kovalainen-for-2008/|title=McLaren confirm Heikki Kovalainen for 2008 (updated)|publisher=f1fanatic.co.uk|author=Collantine, Keith|date=14 December 2007|accessdate=31 August 2010}}</ref> who signed a new five-year multimillion-pound contract to stay with McLaren-Mercedes until the end of the 2012 season.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7196436.stm|title=Hamilton signs new McLaren deal|publisher=BBC Sport|date=18 January 2008|accessdate=31 August 2010}}</ref>
-[[Bestaand:Lewis_hamilton_-_2008_Melb_GP.jpg|links|duum|Hamilton won the first race of 2008 in Melbourne, Australia.]]
-Hamilton won the first race of the 2008 season, the Australian Grand Prix, having qualified on pole position.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7299130.stm|title=Hamilton wins dramatic F1 opener|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=16 March 2008|accessdate=20 November 2012}}</ref> In Malaysia, he finished fifth after he had started from ninth on the grid, serving a penalty for impeding Nick Heidfeld's qualifying lap.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7310226.stm|title=Räikkönen eases to Malaysia win|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=23 March 2008|accessdate=20 November 2012}}</ref><ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7309337.stm|title=McLaren duo punished for impeding|publisher=[[BBC Sport]]|date=22 March 2008|accessdate=20 November 2012}}</ref> He was back on the podium in Spain finishing third.<ref name="F1Fanatic 2008 Spanish Grand Prix review">{{cite news|last=Collantine|first=Keith|title=Räikkönen leads crushing Ferrari 1–2|url=http://www.f1fanatic.co.uk/2008/04/27/2008-spanish-grand-prix-review-raikkonen-leads-crushing-ferrari-1-2/|date=27 April 2008|accessdate=27 April 2007}}</ref> Hamilton finished second in Turkey,<ref>{{cite web|url=http://www.grandprix.com/race/r790racenotes.html|title=Massa wins Turkish GP for third straight year|publisher=grandprix.com|accessdate=31 August 2010|archive-url=https://web.archive.org/web/20090612093643/http://www.grandprix.com/race/r790racenotes.html|archive-date=12 June 2009|dead-url=yes|df=dmy-all}}</ref> and won the Monaco Grand Prix, putting him in the lead of the championship.<ref>{{cite web|url=http://www.f1fanatic.co.uk/2008/05/25/2008-monaco-grand-prix-review-ferrari-mistakes-let-lewis-hamilton-in-for-win/|title=2008 Monaco Grand Prix review: Ferrari mistakes let Lewis Hamilton in for win|publisher=f1fanatic.co.uk|author=Collantine, Keith|date=28 May 2008|accessdate=31 August 2010}}</ref> In Montreal, Hamilton crashed into the back of Räikkönen during the race, after failing to see that the Finn was waiting at a red light at the end of the pit lane as the whole field went past under the guide of the safety car. Both cars were forced to retire and Hamilton was given a 10-position grid penalty for the next race, the French Grand Prix.<ref>{{cite news|title=Kubica leads historic BMW 1–2 in Canada|first=Matt|last=Beer|url=http://www.autosport.com/news/report.php/id/68131|work=[[Autosport]]|date=8 June 2008|accessdate=20 November 2012|archiveurl=https://web.archive.org/web/20080710105046/http://www.autosport.com/news/report.php/id/68131|archivedate=10 July 2008}}</ref><ref>{{cite news|url=https://www.theguardian.com/sport/2008/jun/12/lewishamilton.formulaone|first=Alan|last=Henry|authorlink=Alan Henry|title=Hamilton bullish despite 10-place grid penalty|work=[[The Guardian]]|date=12 June 2008|accessdate=20 November 2012|location=London}}</ref> Despite an error in qualifying that saw him start fourth on the grid, Hamilton went on to win the British Grand Prix in difficult, wet conditions in a performance regarded as one of the best of his career so far.<ref name="BBC News British Grand Prix">{{cite news|last=Benson|first=Andrew|title=BBC Sport at Silverstone|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7492145.stm|date=6 July 2008|accessdate=6 June 2008|publisher=BBC News}}</ref> In the next race at Hockenheim, Hamilton won the race despite a tactical blunder by his team's strategists.<ref>{{cite web|url=http://www.f1fanatic.co.uk/2008/07/20/lewis-hamilton-wins-despite-strategy-blunder-2008-german-gp-review/|title=Lewis Hamilton wins despite strategy blunder (2008 German GP review)|publisher=f1fanatic.co.uk|author=Collantine, Keith|date=20 July 2008|accessdate=31 August 2010}}</ref>
+Nen månd nå et vertrek van Alonso, wyr et bevestigd dat Heikki Kovalainen den tweyden wågen ryden sül vöär McLaren-Mercedes in 2008 nevven Hamilton, den nen ny vyfjårig konkrakt van meyrdere miljoonen punden teakenden üm töt et ende van et seisoon van 2012 by McLaren-Mercedes too blyven.
+[[Bestaand:Lewis_hamilton_-_2008_Melb_GP.jpg|links|duum|Hamilton wön de eyrste race van 2008 in Melbourne, Australie.]]
+Hamilton wön de eyrste race van et seisoon van 2008, den Grouten Prys van Australie, nådat hy up de eyrste positsy was begönnen. In Maleysie endigeden hy vyvdes nådat hy van de neagende plekke was estarted, wårby hy nen strav mos uutsitten vöär et hinderen van de kwalifikatsyrunde van Nick Heidfeld. Hy was terügge up et podium in Spanje döär dår dardes too endigen. Hamilton endigeden tweyds in Türkeye en wön den Grouten Prys van Monaco, wat hem an de leiding bracht van et werldkampioonskap. In Montreal botseden Hamilton tydens de race up de achterkante van Räikkönen, nådat hy neet had können seen dat den Fin mos wachten vöär et roden licht an et ende van de pitstråte terwyl et heylen veld vöärby kwam under begeleiding van nen safety car. Beyde wågen mosten upgeven en Hamilton kreg nen strav van 10 positsys vöär den start van de völgende race, den fransken Grand Prix. Undanks nen fout by de kwalifikatsy wårdöär hy as veerdes starteden, wön den britsken Grand Prix under möylike, natte umstandigheyden met ne prestatsy dee töt düsverre as eyne van de beste van syne karriere wördt esen. In de völgende race up Hockenheim wön Hamilton undanks nen taktisken blünder van de teamstrategy.
 
-Hamilton won the Belgian Grand Prix, but was later judged to have gained an unfair advantage by cutting a chicane to avoid hitting Räikkönen.<ref>{{cite news|url=http://www.autosport.com/news/report.php/id/70405|title=autosport.com&nbsp;– F1 News: Post-race press conference&nbsp;– Belgium|work=Autosport|accessdate=4 November 2008|date=7 September 2008}}</ref> McLaren said that their telemetry showed Hamilton backed off to let Räikkönen past<ref>{{cite news|url=http://www.autosport.com/news/report.php/id/70404|title=autosport.com&nbsp;– F1 News: McLaren: No choice but to appeal|work=Autosport|accessdate=4 November 2008|date=7 September 2008}}</ref> but Hamilton was given a 25-second penalty, which relegated him to third and handed title rival Massa victory. Hamilton's lead in the Drivers' Championship was cut to two points, and an appeal by McLaren to the FIA World Motor Sport Council was rejected.<ref>{{cite news|title=No big surprises in Paris|publisher=grandprix.com|url=http://www.grandprix.com/ns/ns20794.html|date=23 September 2008|accessdate=29 September 2008}}</ref>
+Hamilton wön den belgisken Grand Prix, mår låter wyr döär eoordeeld dat hy nen üneyrlik vöärdeyl had ehad döär nen versmalling in et parkours af too snyden üm nen botsing med Räikkönen too vöärkommen. McLaren sei dat öäre telemetry leet seen dat Hamilton achterblev üm Räikkönen vöärby too låten, mår Hamilton kreg nen tydsstrav van 25 sekunden, wat hem terügbracht når de darde plåtse en titelrivål Massa de oaverwinning gav. Hamiltons vöärsprong in et werldkampioonskap vöär koureurs wyr terügebracht töt twey pünten en nen beroop by et FIA World Motor Sport Council döär McLaren wyr avewesen.
 
-The Italian Grand Prix saw Hamilton finish in seventh place, and Hamilton's lead in the championship was reduced to one point.<ref>{{cite web|url=http://www.grandprix.com/race/r799racereport.html|title=Italian GP&nbsp;– Sunday&nbsp;– Race Report: Vettel blows them away|publisher=grandprix.com|accessdate=31 August 2010|archive-url=https://web.archive.org/web/20100201054337/http://www.grandprix.com/race/r799racereport.html|archive-date=1 February 2010|dead-url=yes|df=dmy-all}}</ref> Hamilton finished third at the next race in Singapore, while Massa failed to score any points, allowing Hamilton to increase his championship lead to seven points.<ref>{{cite news|url=https://www.theguardian.com/sport/2008/sep/28/formulaone.lewishamilton1|title=Alonso back on form with Singapore win as Hamilton boosts title hopes|work=The Guardian|author=Briggs, Gemma|date=28 September 2008|accessdate=31 August 2010|location=London}}</ref> In Fuji, Hamilton was given a drive-through penalty for forcing other cars off the track when he made an error on the first lap. Before he could serve the penalty Hamilton attempted to pass Massa, who hit him after making a mistake. Massa was later given a drive-through penalty for this move and Hamilton finished twelfth.<ref>{{cite web|url=http://www.f1fanatic.co.uk/2008/10/12/alonso-wins-as-hamilton-and-massa-stumble-2008-japanese-grand-prix/|title=Alonso wins as Hamilton and Massa stumble (2008 Japanese Grand Prix)|work=F1 Fanatic|publisher=Keith Collantine|last=Collantine|first=Keith|date=12 October 2008|accessdate=31 August 2010}}</ref> With just two races to go, Hamilton led the World Championship by five points from Massa. At the Chinese Grand Prix, Hamilton won the race to take a seven-point lead in the World Championship into the last race of the season. Speaking afterwards, Hamilton said "All weekend we have had God on our side as always, and the team did a phenomenal job in preparing the car, which has been a dream to drive."<ref>{{cite news|url=https://www.telegraph.co.uk/news/newstopics/celebritynews/3227133/Lewis-Hamilton-savours-show-of-family-unity-as-he-moves-closer-to-world-title.html|title=Hamilton savours show of family unity|work=The Daily Telegraph|location=London|first=John|last=Bingham|date=19 October 2008|accessdate=7 May 2010}}</ref>
-[[Bestaand:Hamilton_Brazil_2008_celebrations.jpg|links|duum|Hamilton and team celebrate his maiden Formula One World Championship title.]]
-At the Brazilian Grand Prix, Hamilton needed to finish at least fifth, if Massa won the race, to secure the World Championship. Just before the race began a rain shower struck and Hamilton ran in fourth place before dropping down to sixth after pitting for dry tyres. Intermittent rainfall meant all drivers stopped multiple times between wet and dry tyres, and with three laps remaining Hamilton was running in fifth and just had to maintain position to secure the title. On the penultimate lap, Vettel passed Hamilton and entered the final lap in sixth position and looking unable to retake fifth place. However, on the final lap he and Vettel made up an 18-second gap to overtake Timo Glock, who was struggling on dry tyres, on the last corner to re-take fifth place and deny race-winner Massa the title by one point.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7705230.stm|title=Last-gasp Hamilton takes F1 crown|first=Andrew|last=Benson|publisher=[[BBC Sport]]|date=2 November 2008|accessdate=20 November 2012}}</ref><ref>{{cite web|url=http://www.formula1.com/news/headlines/2008/11/8635.html|title=Hamilton speechless after dramatic title finale|publisher=Formula One|accessdate=26 November 2008|deadurl=yes|archiveurl=https://web.archive.org/web/20081205143351/http://www.formula1.com/news/headlines/2008/11/8635.html|archivedate=5 December 2008|df=dmy}}</ref> This meant that Hamilton had clinched the 2008 Formula One World Championship, becoming the youngest driver to win the title,<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7710778.stm|title=Hamilton in McLaren career pledge|publisher=BBC Sport|first=Andrew|last=Benson|date=5 November 2008|accessdate=17 August 2010|location=McLaren Technology Centre, Woking}}</ref><ref>{{cite news|url=https://www.mirror.co.uk/sport/formula-1/lewis-hamilton-becomes-youngest-ever-354464|title=Lewis Hamilton becomes youngest ever Formula One champion|work=The Mirror|date=2 November 2008|accessdate=3 February 2015}}</ref> the first black driver,<ref>{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/lewishamilton/3367873/Lewis-Hamilton-crowned-youngest-world-champion-at-Brazil-Grand-Prix-Formula-One.html|title=Lewis Hamilton keeps cool to become youngest ever world champion in rainy Brazil|work=The Daily Telegraph|location=London|first=Kevin|last=Garside|date=2 November 2008|accessdate=7 May 2010}}</ref> and the first British driver to win the World Championship since Damon Hill triumphed in 1996.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7705310.stm|title=2008 Brazilian Grand Prix|publisher=BBC Sport|date=2 November 2008|accessdate=31 August 2010}}</ref>
+In den italiaansken Grand Prix endigeden Hamilton seavendes en den vöärsprong van Hamilton in et kampioonskap was now noch eyn pünt. Hamilton endigeden dardes in de völgende race in Singapore, terwyl Massa geyn pünten pakkeden, wårdöär den vöärsprong van Hamilton in et kampioonskap upleep töt seaven pünten. In Fuji kreg Hamilton nen strav wårby hy mos döärryden (by de völgende pitrunde) vöär et van de båne düwen van andere wågen doo hy nen fout beging in de eyrste runde. Vöärdat Hamilton den strav kön uutsitten, probereden hy Massa too passeren, den hem rakeden nådat hy nen fout måkeden. Massa kreg vöär disse aktsy låter nen strav wårby hy mos döärryden (by de völgende pitrunde) en Hamilton endigeden twålvdes. Med noch twey races too gån had Hamilton nen vöärsprong in et werldkampioonskap van vyv pünten up Massa. Den chineesken Grand Prix wön Hamilton wårdöär hy med nen vöärsprong van seaven pünten in et werldkampioonskap de låtste race van et seisoon inging. Achterav sei Hamilton: "Et heyle weekende hebbet wy god an unse syde ehad so as altyd en et heylen team hevt fantatisk wark edane by et vöärbereiden van den wågen, den nen dröym was üm in too ryden.<nowiki>''</nowiki>
+[[Bestaand:Hamilton_Brazil_2008_celebrations.jpg|links|duum|Hamilton en syn team vyren synen eyrsten Formule Eyn werldkampioonskapstitel.]]
+By den brasiliaansken Grand Prix mos Hamilton minstens as vyvden endigen as Massa de race wön üm et werldkampioonskap veilig too stellen. Net vöär de race begön der ne reagenbuie en Hamilton was as veerden eplåtst vöärdat hy terügvelen når de sesde plåtse nådat hy nen pitsop had emåked vöär dröyge banden. Wisselvallige neaderslag beteakenden dat alle koureurs meyrdere målen wisselden tüsken reagenbanden en banden vöär droug weader en med dree runden too gån lag Hamilton vyvdes en mos hy enkel syne positsy vasteholden üm den titel too verseakeren. In de vöärlåtste runde passereden Vettel Hamilton en den begön de låtste runde as sesden en lek de vyvde plåtse neet meyr too können terügnemmen. Skonwal måkeden hy en Vettel in de låtste runde nen gat van 18 sekunden good döär Timo Glock, den et möylik had up banden vöär ne dröyge wegge, by de låtste bochte in too hålen sodat hy de vyvde plåtse terügnam en blev de racewinnaar Massa vöär den titel med eyn pünt vöär. Dit beteakenden dat Hamilton et werldkampioonskap van de Formule Eyn van 2008 had epakt en wyr den jüngsten koureur den den titel wön, den eyrsten swarten koureur en den eyrsten britsken koureur den et werldkampioonskap wön sinds Damon Hill in 1996.
 
-===== Racial abuse =====
+===== Racistisk misbruuk =====
 In February, Hamilton was verbally heckled and otherwise abused during pre-season testing at the Circuit de Catalunya in Catalonia by several Spanish spectators who wore black face paint and black wigs, as well as shirts bearing the words "Hamilton's familly{{sic|famil|ly}}".<ref name="times20080204">{{cite news|url=http://www.timesonline.co.uk/tol/sport/formula_1/article3305228.ece|title=Lewis Hamilton 'saddened' by racist abuse|date=4 February 2008|accessdate=27 July 2009|work=The Times|location=London|first=Sadie|last=Gray}}</ref> Hamilton became widely unpopular in Spain because of his rivalry with Spanish former teammate Fernando Alonso. The FIA warned Spanish authorities about the repetition of such behaviour.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7225523.stm|title=Hamilton saddened by racist abuse|publisher=BBC Sport|accessdate=4 February 2008|date=4 February 2008}}</ref> and launched a "Race Against Racism" campaign.<ref>{{cite web|url=http://www.formula1.com/news/headlines/2008/2/7355.html|title=FIA to launch anti-racism initiative|publisher=Formula1.com|accessdate=4 November 2008|deadurl=yes|archiveurl=https://web.archive.org/web/20080708212218/http://www.formula1.com/news/headlines/2008/2/7355.html|archivedate=8 July 2008|df=dmy}}</ref>
 
 Shortly before the 2008 Brazilian Grand Prix, a website owned by the Spanish branch of the New York–based advertising agency TBWA and named "pinchalaruedadeHamilton" ("burst Hamilton's tyre") was featured in the British media. The website contained an animated image of Interlagos that allowed users to leave nails and porcupines on the track for Hamilton's car to run over. Among thousands of comments left since 2007, some included racial insults.<ref>{{cite news|url=https://www.theguardian.com/media/2008/nov/01/hamilton-racism-formula-one-spain|title=Website used to abuse Lewis Hamilton owned by global ad agency|work=The Guardian|location=London|first=Giles|last=Tremlett|date=1 November 2008|accessdate=7 May 2010}}</ref> His rival Fernando Alonso condemned the racist supporters.<ref>{{cite news|url=http://www.barcelonareporter.com/index.php?/news/comments/spains_f1_alonso_condemns_racism_aimed_at_hamilton/|title=The Barcelona Reporter|publisher=barcelonareporter.com|accessdate=11 July 2010|deadurl=yes|archiveurl=https://web.archive.org/web/20110718055655/http://www.barcelonareporter.com/index.php?%2Fnews%2Fcomments%2Fspains_f1_alonso_condemns_racism_aimed_at_hamilton%2F|archivedate=18 July 2011|df=dmy}}</ref>
@@ -1163,4 +1163,5 @@ Hamilton holds the following records in [//en.wikipedia.org/wiki/List_of_Formula
 |128
 |}
 <br />
+
 <references />
