*Empty MediaWiki Message*

--- a/Kraantje_Pappie.mw
+++ b/Kraantje_Pappie.mw
@@ -4,7 +4,7 @@
 |- id="16"
 | align="center" colspan="3" id="17" style="background-color:#F0E68C; color:#000000;" |'''Algemeane informåsy'''
 |- id="19"
-| id="20" style="font-weight:bold;" |Volledigen&nbsp;nåme
+| id="20" style="font-weight:bold;" |Volledige&nbsp;nåme
 | colspan="2" id="22" |Alex van der Zouwen
 |- id="24"
 | id="25" style="font-weight:bold;" |Alias
@@ -13,7 +13,7 @@
 | id="30" style="font-weight:bold;" |Geboaren
 | colspan="2" id="32" |[[1 juli|1 jüly]]<nowiki/> [[1986]]<br />
 |- id="36"
-| id="37" style="font-weight:bold;" |Geboarteplåts
+| id="37" style="font-weight:bold;" |Geboarteplåtse
 | colspan="2" id="39" |Rozenburg
 |- id="42"
 | id="43" style="font-weight:bold;" |Land
@@ -42,22 +42,22 @@
 |}
 |}
 [[Bestaand:14-04-20_Kraantje_Pappie_05.jpg|duum|Kraantje Pappie op Påspop]]
-'''Alex van der Zouwen''' (Rozenburg, [[1 juli|1 jüly]] [[1986]]), bekennt onder syn artystennåme '''Kraantje Pappie''', is nen neaderlandsk [[Hiphop|hiphopartyst]] en televisypresentator. Hy steyt vörnåmelik bekennt üm syn ünyken, våk ''off-beat'' en åverdreaven manyr van rappen. Van der Zouwen hev nen kontrakt by et hiphoplabel Noah's Ark en hev dår töt düsver seaven albüms en verskillende eps en singles uutebröcht.
+'''Alex van der Zouwen''' (Rozenburg, [[1 juli|1 jüly]] [[1986]]), bekennt under syne artystennåme '''Kraantje Pappie''', is nen neaderlandsk [[Hiphop|hiphopartyst]] en televisypresentator. Hy steyt vöärnåmelik bekennt üm syn ünyken, våk ''off-beat'' en oaverdreaven manyr van rappen. Van der Zouwen hevt nen kontrakt by et hiphoplabel Noah's Ark en hevt dår töt düsverre seaven albüms en verskillende eps en singles uutebracht.
 
 == Biografy ==
-Van der Zouwen groien op in Rozenburg in de büürte van [[Rötterdaam|Rotterdam]] en volgen de middelbåre skole in Süüdlåren en [[Grunnen (stad)|Groningen]]. Vanweagen syn süksesvölle jüdokarriere woanen hy vervölgens nen tyd in [[Haorlem|Haarlem]]. In 2016 deen Van der Zouwen med an et realityprogramma ''Expeditie Robinson'' in et 17en seisun, dat hy verleet vanweagen heimwee.
+Van der Zouwen groien op in Rozenburg in de büürte van [[Rötterdaam|Rotterdam]] en volgeden de middelbåre skole in Süüdlåren en [[Grunnen (stad)|Groningen]]. Vanweagen syn süksesvölle jüdokarriere woanden hy vervölgens nen tyd in [[Haorlem|Haarlem]]. In 2016 deden Van der Zouwen med an et realityprogramma ''Expeditie Robinson'' in et 17en seisoon, dat hy verleet vanweagen heimwee.
 
 === Müsyk ===
-De öärsprong van de nåme ''Kraantje Pappie'' is ondüdelik, mår is wårskynlik avkümstig uut syn jöögd; syn våder was vruger krånmasjinist in den rotterdamsken håven. Van der Zouwen hev in interviews verskillende verhålen verteld. Hy begon rönd 2007 dör mikstapes en optreadens op te vallen in de hiphopgemeanskap. In 2007 won Van der Zouwen de groningske hiphopkompetisy ''Before the Fame Awards'' wårmed syn karriere as rapper van den gründ kwamen. Hy brök begin 2012 dör by et groute püblyk med syn debütalbüm ''Crane''. Et albüm kenmearken sich dör Van der Zouwens rymtechnyk in kombinasy med de dubstep- en grimeproduksys van et groningske produsententrio Noisia (ok bekennt as Nightwatch).
+De öärsprong van de nåme ''Kraantje Pappie'' is ondüdelik, mår is wårskynlik avkümstig uut syn jöögd; synen våder was vrooger krånmasjinist in den rotterdamsken håven. Van der Zouwen hevt in interviews verskillende verhålen verteld. Hy begon rönd 2007 döär mikstapes en optreadens up too vallen in de hiphopgemeanskap. In 2007 wön Van der Zouwen de groningske hiphopkompetisy ''Before the Fame Awards'' wårmed syne karriere as rapper van den grund kwamen. Hy brök begin 2012 döär by et groute püblyk med syn debütalbüm ''Crane''. Et albüm kenmearken sich dör Van der Zouwens rymtechnyk in kombinasy med de dubstep- en grimeproduksys van et groningsken produsententrio Noisia (ok bekennt as Nightwatch).
 
-Begin mei 2015 bröcht Van der Zouwen inens dree nye albüms uut, wårvan hy der aen opstüren når fans van wy hy et adres had. Et is ne trilogy, enåmd ''Guardian van the Real Shit''. Op disse albüms ståt onder andere såmenwarkingen med Jan Smit, Jiggy Djé en de Gelogeerde Aap. De albüms waren ok nen weak gråtis te downloaden. By mekare tellen disse 3 plåten 39 tracks med allerlei verskillende artysten zo as Jan Smit en Dope D.O.D.
+Begin mei 2015 bracht Van der Zouwen inens dree nye albüms uut, wårvan hy der eyn opstüreden når fans van wy hy et adres had. Et is ne trilogy, enåmd ''Guardian van the Real Shit''. Op disse albüms ståt under andere såmenwarkingen med Jan Smit, Jiggy Djé en de Gelogeerde Aap. De albüms waren ok nen weak gråtis te downloaden. By mekare tellen disse 3 plåten 39 tracks med allerlei verskillende artysten so as Jan Smit en Dope D.O.D.
 
-Van der Zouwen bröcht in 2012 en 2014 de aerste twae delen van et dreelük ''Crane'' uut. Op 28 oktober 2016 kwam et darde deel van et dreelük uut, dat in september 2017 sölvs med gold beloand is.
+Van der Zouwen bracht in 2012 en 2014 de eyrste twey delen van et dreelük ''Crane'' uut. Op 28 oktober 2016 kwam et darde deel van et dreelük uut, dat in september 2017 sölvs med gold beloand is.
 
-Hy ontvingen verskeydene golden plåten vöär onder andere de singles 'Waar Is Kraan', 'Feesttent', 'Handen Omhoog' en 'De Manier'.
+Hy ontvingen verskeydene golden plåten vöär under andere de singles 'Waar Is Kraan', 'Feesttent', 'Handen Omhoog' en 'De Manier'.
 
 === Televisy ===
-In 2013 debütaeren Van der Zouwen as televisypresentator en presentaeren hy sammen med Geraldine Kemper et twaeden seisun van et programma The Next MC.  Et jår dårnå ging Kraantje dör med presentaeren by et televisynetwark [[BNN]]. Hy maken deel uut van de grup presentatoren van et [[NPO 3|Neaderland 3]]-programma De Social Club. Ok as presentator gebrüken hy de nåme Kraantje Pappie.
+In 2013 debutereden Van der Zouwen as televisypresentator en presentereden hy sammen med Geraldine Kemper et tweyden seisoon van et programma The Next MC. Et jår dårnå ging Kraantje döär med presenteren by et televisynetwark [[BNN]]. Hy måkeden deel uut van den groop presentatoren van et [[NPO 3|Neaderland 3]]-programma De Social Club. Ok as presentator gebrükeden hy de nåme Kraantje Pappie.
 
 == Diskografy ==
 
