--- a/Kraantje_Pappie.mw
+++ b/Kraantje_Pappie.mw
@@ -48,7 +48,7 @@
 Van der Zouwen groien op in Rozenburg in de büürte van [[Rötterdaam|Rotterdam]] en volgeden de middelbåre skole in Süüdlåren en [[Grunnen (stad)|Groningen]]. Vanweagen syn süksesvölle jüdokarriere woanden hy vervölgens nen tyd in [[Haorlem|Haarlem]]. In 2016 deden Van der Zouwen med an et realityprogramma ''Expeditie Robinson'' in et 17en seisoon, dat hy verleet vanweagen heimwee.
 
 === Müsyk ===
-De öärsprong van de nåme ''Kraantje Pappie'' is ondüdelik, mår is wårskynlik avkümstig uut syn jöögd; synen våder was vrooger krånmasjinist in den rotterdamsken håven. Van der Zouwen hevt in interviews verskillende verhålen verteld. Hy begon rönd 2007 döär mikstapes en optreadens up too vallen in de hiphopgemeanskap. In 2007 wön Van der Zouwen de groningske hiphopkompetisy ''Before the Fame Awards'' wårmed syne karriere as rapper van den grund kwamen. Hy brök begin 2012 döär by et groute püblyk med syn debütalbüm ''Crane''. Et albüm kenmearken sich dör Van der Zouwens rymtechnyk in kombinasy med de dubstep- en grimeproduksys van et groningsken produsententrio Noisia (ok bekennt as Nightwatch).
+De öärsprong van de nåme ''Kraantje Pappie'' is ondüdelik, mår is wårskynlik avkümstig uut syn jöögd; synen våder was vrooger krånmasjinist in den rotterdamsken håven. Van der Zouwen hevt in interviews verskillende verhålen verteld. Hy begon rönd 2007 döär mikstapes en optreadens up too vallen in de hiphopgemeanskap. In 2007 wön Van der Zouwen de groningske hiphopkompetisy ''Before the Fame Awards'' wårmed syne karriere as rapper van den grund kwamen. Hy brök begin 2012 döär by et groute püblyk med syn debütalbüm ''Crane''. Et albüm kenmarkeden sich döär Van der Zouwens rymtechnyk in kombinatsy med de dubstep- en grimeproduksys van et groningsken produsententrio Noisia (ok bekennt as Nightwatch).
 
 Begin mei 2015 bracht Van der Zouwen inens dree nye albüms uut, wårvan hy der eyn opstüreden når fans van wy hy et adres had. Et is ne trilogy, enåmd ''Guardian van the Real Shit''. Op disse albüms ståt under andere såmenwarkingen med Jan Smit, Jiggy Djé en de Gelogeerde Aap. De albüms waren ok nen weak gråtis te downloaden. By mekare tellen disse 3 plåten 39 tracks med allerlei verskillende artysten so as Jan Smit en Dope D.O.D.
 
