*Empty MediaWiki Message*

--- a/Färöösk.mw
+++ b/Färöösk.mw
@@ -1,25 +1,25 @@
-t '''Faeröars''' (in t Faeröars: "Føroyskt", [[Internationaal Fonetisch Alfabet|Oetsproake]]: [{{IPA|ˈføːɹɪst}}]) is ne [[Noord-Germaanse talen|Noord-Germaanse]] of [[Skandinavië|Scandinaviese]] sproake, dee't per 2007 wör esprökken duur roem 48.000 leu.
-t Is ene van de offisjele sproaken van de [[Faeröareailaanden]]. n Aanderen is t [[Deens]].
+Et '''färöösk''' of '''förisk''' (in de språke selv: ''føroyskt'', [[Internationaal Fonetisch Alfabet|uutspråke]]: [{{IPA|ˈføːɹɪst}}]) is ne [[Noord-Germaanse taelen|noordgermaanske]] of [[Skandinavië|skandinaviske]] språke, dee at per 2007 wör espröäken döär ruum 48.000 lüde.
+Et is eyne van de officiele språken van de [[Faeröer|Färöer]], een anderen is et [[Deens|däänsk]].
 
-{{interwiki|kode=fo|naam=Faeröarske}}
+{{interwiki|kode=fo|naam=färööske}}
 
-== Beskriewing ==
-[[Bestaand:Faroe islands isoglosses.png|thumb|right|200px|Wat Faeröarse [[isoglos]]sen]]
-t Faeröars heurt met t [[Ieslaans|Ieslaands]] töt de westelike of ''eailaand-Skandinaviese'' sproaken. Faeröarssprekkers en sprekkers van vastelaand-Skandinaviese sproaken (zo as [[Noors]], [[Zweeds]] en [[Deens]]) köant mekoar nit verstoan. t Faeröars wörd eskrewen met t [[Latiens]]e alfabet, woer't verskeaidene tekens bie zeent edoan: ''Á/á'', ''Í/í'', ''Ó/ó'', ''Ú/ú'', ''Ý/ý'', ''Ð/ð'' (''edh''), ''Ø/ø'' en ''Æ/æ''. De letters ''c'', ''q'', ''w'', ''x'' en ''z'' wordt nit ebroekt.
+== Beskryving ==
+[[Bestaand:Faroe islands isoglosses.png|thumb|right|200px|Wat färööske [[isoglos]]sen]]
+Et färöösk höyrt med et [[Ieslaans|yslandsk]] töt de westelike of ''eilandskandinaviske'' språken. Färööskspreakers en spreakers van vastelandskandinaviske språken (so as [[noors]]k, [[Sveeds|sweedsk]] en [[Deens|däänsk]]) künnet mekaar nit verstån. Et färöösk wördt eskreaven med et [[Latiens|latynske]] alfabet, wår at verskeidene teykens by sint edån: ''Á/á'', ''Í/í'', ''Ó/ó'', ''Ú/ú'', ''Ý/ý'', ''Ð/ð'' (''edh''), ''Ø/ø'' en ''Æ/æ''. De letters ''c'', ''q'', ''w'', ''x'' en ''z'' wordet nit ebruked.
 
-n Aparten letter ''edh'' ([[ð]]) wörd op verskeaidene wiezes oet esprökken. Meesttieds wörd he stil.
+Den aparten letter ''edh'' ([[ð]]) wördt up verskeidene wyses uutespröäken. Meysttyds wördt he stil.
 
-n Samenstelling van t Faeröars lik völle op t Ieslaands. Wat verschillen zeent:
-* [[Etymologie|etymologiserende skriefwieze]]: De skriefwieze van t Faeröars wik slim of van de oetsproake, tegenoawer t Ieslaands, det nog wal op dezelfde manere wörd oet esprökken. De skriefwieze wör in [[1846]] duur V.U. Hammarshaimb vaste legd. Ieslaanders köant doarduur t Faeröars wal leazen, mear nit verstoan.
-* [[dialekt]]en: Faeröars hef völle dialekten, t Ieslaands hoaste ginne.
-* [[oetsproake]]: in t Faeröars he'j gin dentale frikatieven (Engels ''th'', Ieslaands ''þ'') - disse zeent net as in t Zweeds, Noors en Deens verdwenen. 
-* [[Taalpurisme|purisme]]: t Faeröars hef net als t IJslands ne slim behooldende periode had, mer in t Faeröers, en vuural in t gesprökkene, zeent toch völle Deense leenwöarde in ekömmen.
+Den samenstelling van et färöösk likt vöäle up et yslandsk. Wat verskillen sint:
+* [[Etymologie|etymologiserende skryvwyse]]: de skryvwyse van et färöösk wikt slim of van de uutspråke, teagenoaver et yslandsk, dat noch wal up deselvde manere wördt uutespröäken. De skryvwyse wör in [[1846]] döär V.U. Hammarshaimb vastelegd. Yslanders künnet dårdöär et färöösk wal leasen, mär nit verstån.
+* [[dialekt]]en: färöösk hevt vöäle dialekten, et yslandsk håste ginne.
+* [[oetsproake|uutspråke]]: in et färöösk heb y gin dentale frikativen (engelsk ''th'', yslandsk ''þ'') - disse sint net as in et sweedsk, noorsk en däänsk verdweynen. 
+* [[Taalpurisme|purisme]]: et färöösk hevt net as et yslandsk ne slim beholdende periode had, mär in et färöösk, en vöäral in et espröäkene, sint toch vöäle däänske leynwöörde in ekümmen.
 
-== Oetgoande verbeendige ==
-* http://www.fmn.fo/ Webstea van de Faeröarske Sproakroad]
-* [http://inet.dpb.dpu.dk/infodok/sprogforum/Espr19/Jogvan.pdf ''Føroyskt – Faroese'' – Artikel oawer t Faeröarske Sproakbeleid] ''(PDF, Engels)''
+== Uutgånde verwysingen ==
+* [http://www.fmn.fo/ Websteade van de färööske Språkråd]
+* [http://inet.dpb.dpu.dk/infodok/sprogforum/Espr19/Jogvan.pdf ''Føroyskt – Faroese'' – artikel oaver et färööske språkbeleid] ''(PDF, engelsk)''
 
 {{Germoans}}
+{{Dialekt|twd||Nysassiske Skryvwyse}}
 
-[[Kategorie:Tweants artikel]]
 [[Kategorie:Germaanse taol]]
