*Empty MediaWiki Message*

--- a/Färöösk.mw
+++ b/Färöösk.mw
@@ -13,7 +13,7 @@ Den samenstelling van et färöösk likt vöäle up et yslandsk. Wat verskillen 
 * [[Etymologie|etymologiserende skryvwyse]]: de skryvwyse van et färöösk wikt slim of van de uutspråke, teagenoaver et yslandsk, dat noch wal up deselvde manere wördt uutespröäken. De skryvwyse wör in [[1846]] döär V.U. Hammarshaimb vastelegd. Yslanders künnet dårdöär et färöösk wal leasen, mär nit verstån.
 * [[dialekt]]en: färöösk hevt vöäle dialekten, et yslandsk håste ginne.
 * [[oetsproake|uutspråke]]: in et färöösk heb y gin dentale frikativen (engelsk ''th'', yslandsk ''þ'') - disse sint net as in et sweedsk, noorsk en däänsk verdweynen. 
-* [[Taalpurisme|purisme]]: et färöösk hevt net as et yslandsk ne slim beholdende periode had, mär in et färöösk, en vöäral in et espröäkene, sint toch vöäle däänske leynwöörde in ekümmen.
+* [[Taalpurisme|purisme]]: et färöösk hevt net as et yslandsk ne slim beholdende periode had, mär in et färöösk, en vöäral in et espröäkene, sint toch vöäle däänske leynwöörde in eköämen.
 
 == Uutgånde verwysingen ==
 * [http://www.fmn.fo/ Websteade van de färööske Språkråd]
