--- a/Färöösk.mw
+++ b/Färöösk.mw
@@ -1,4 +1,4 @@
-Et '''färöösk''' of '''förisk''' (in de språke selv: ''føroyskt'', [[Internationaal Fonetisch Alfabet|uutspråke]]: [{{IPA|ˈføːɹɪst}}]) is ne [[Noord-Germaanse taelen|noordgermaanske]] of [[Skandinavië|skandinaviske]] språke, dee at per 2007 wör espröäken döär ruum 48.000 lüde.
+Et '''färöösk''' of '''förisk''' (in de språke selv: ''føroyskt'', [[Internationaal Fonetisch Alfabet|uutspråke]]: [{{IPA|ˈføːɹɪst}}]) is ne [[Noord-Germaanse taelen|noordgermaanske]] of [[Skandinavië|skandinaviske]] språke, dee at per 2007 wör esprökken döär ruum 48.000 lüde.
 Et is eyne van de officiele språken van de [[Faeröer|Färöer]], een anderen is et [[Deens|däänsk]].
 
 {{interwiki|kode=fo|naam=färööske}}
@@ -7,13 +7,13 @@ Et is eyne van de officiele språken van de [[Faeröer|Färöer]], een anderen i
 [[Bestaand:Faroe islands isoglosses.png|thumb|right|200px|Wat färööske [[isoglos]]sen]]
 Et färöösk höyrt med et [[Ieslaans|yslandsk]] töt de westelike of ''eilandskandinaviske'' språken. Färööskspreakers en spreakers van vastelandskandinaviske språken (so as [[noors]]k, [[Sveeds|sweedsk]] en [[Deens|däänsk]]) künnet mekaar nit verstån. Et färöösk wördt eskreaven med et [[Latiens|latynske]] alfabet, wår at verskeidene teykens by sint edån: ''Á/á'', ''Í/í'', ''Ó/ó'', ''Ú/ú'', ''Ý/ý'', ''Ð/ð'' (''edh''), ''Ø/ø'' en ''Æ/æ''. De letters ''c'', ''q'', ''w'', ''x'' en ''z'' wordet nit ebruked.
 
-Den aparten letter ''edh'' ([[ð]]) wördt up verskeidene wyses uutespröäken. Meysttyds wördt he stil.
+Den aparten letter ''edh'' ([[ð]]) wördt up verskeidene wyses uutesprökken. Meysttyds wördt he stil.
 
-Den samenstelling van et färöösk likt vöäle up et yslandsk. Wat verskillen sint:
-* [[Etymologie|etymologiserende skryvwyse]]: de skryvwyse van et färöösk wikt slim of van de uutspråke, teagenoaver et yslandsk, dat noch wal up deselvde manere wördt uutespröäken. De skryvwyse wör in [[1846]] döär V.U. Hammarshaimb vastelegd. Yslanders künnet dårdöär et färöösk wal leasen, mär nit verstån.
-* [[dialekt]]en: färöösk hevt vöäle dialekten, et yslandsk håste ginne.
+Den samenstelling van et färöösk likt völle up et yslandsk. Wat verskillen sint:
+* [[Etymologie|etymologiserende skryvwyse]]: de skryvwyse van et färöösk wikt slim of van de uutspråke, teagenoaver et yslandsk, dat noch wal up deselvde manere wördt uutesprökken. De skryvwyse wör in [[1846]] döär V.U. Hammarshaimb vastelegd. Yslanders künnet dårdöär et färöösk wal leasen, mär nit verstån.
+* [[dialekt]]en: färöösk hevt völle dialekten, et yslandsk håste ginne.
 * [[oetsproake|uutspråke]]: in et färöösk heb y gin dentale frikativen (engelsk ''th'', yslandsk ''þ'') - disse sint net as in et sweedsk, noorsk en däänsk verdweynen. 
-* [[Taalpurisme|purisme]]: et färöösk hevt net as et yslandsk ne slim beholdende periode had, mär in et färöösk, en vöäral in et espröäkene, sint toch vöäle däänske leynwöörde in eköämen.
+* [[Taalpurisme|purisme]]: et färöösk hevt net as et yslandsk ne slim beholdende periode had, mär in et färöösk, en vöäral in et esprökkene, sint toch völle däänske leynwöörde in ekümmen.
 
 == Uutgånde verwysingen ==
 * [http://www.fmn.fo/ Websteade van de färööske Språkråd]
