--- a/Färöösk.mw
+++ b/Färöösk.mw
@@ -1,5 +1,5 @@
-Et '''färöösk''' of '''förisk''' (in de språke selv: ''føroyskt'', [[Internationaal Fonetisch Alfabet|uutspråke]]: [{{IPA|ˈføːɹɪst}}]) is ne [[Noord-Germaanse taelen|noordgermaanske]] of [[Skandinavië|skandinaviske]] språke, dee at per 2007 wör esprökken döär ruum 48.000 lüde.
-Et is eyne van de officiele språken van de [[Faeröer|Färöer]], een anderen is et [[Deens|däänsk]].
+Et '''färöösk''' of '''färougsk''' (in de språke selv: ''føroyskt'', [[Internationaal Fonetisch Alfabet|uutspråke]]: [{{IPA|ˈføːɹɪst}}]) is ne [[Noord-Germaanse taelen|noordgermaanske]] of [[Skandinavië|skandinaviske]] språke, dee at per 2007 wör esprökken döär ruum 48.000 lüde.
+Et is eyne van de officiele språken van de [[Faeröer|Färöer]] (of: ''Färougen''), een anderen is et [[Deens|däänsk]].
 
 {{interwiki|kode=fo|naam=Färööske}}
 
